Refine `gotchas` notebook with addition of UniFi logo and update licence cell.

--- a/tutorials/gotchas.ipynb
+++ b/tutorials/gotchas.ipynb
@@ -6,14 +6,21 @@
    "source": [
     "<div align=\"right\">\n",
     "Massimo Nocentini<br>\n",
+    "<small>\n",
     "<br>June 15, 2016: multimethods references\n",
     "<br>April 28, 2016: counting sort\n",
     "<br>April 26, 2016: hidden squares, Bunch pattern\n",
+    "</small>\n",
+    "<br>\n",
+    "<br>\n",
+    "<img src=\"http://www.cerm.unifi.it/chianti/images/logo%20unifi_positivo.jpg\" \n",
+    "        alt=\"UniFI logo\" style=\"float: right; width: 20%; height: 20%;\">\n",
     "</div>\n",
+    "\n",
     "<br>\n",
     "<div align=\"center\">\n",
     "<b>Abstract</b><br>\n",
-    "This document collect some gotchas and experiment in Python, to understand objects and execution pitfalls.\n",
+    "This document collect some gotchas and experiment in Python, to understand objects and execution pitfalls. Moreover, it is a working sandbox in order to put interesting implementation patterns, \"one-liners\", and miscellanea from interesting books.\n",
     "</div>"
    ]
   },
@@ -33,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -1327,7 +1334,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-nc/4.0/88x31.png\" /></a><br /><span xmlns:dct=\"http://purl.org/dc/terms/\" property=\"dct:title\">Gotchas tutorial</span> by <a xmlns:cc=\"http://creativecommons.org/ns#\" href=\"mailto:massimo.nocentini@unifi.it\" property=\"cc:attributionName\" rel=\"cc:attributionURL\">Massimo Nocentini</a> is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc/4.0/\">Creative Commons Attribution-NonCommercial 4.0 International License</a>.<br />Based on a work at <a xmlns:dct=\"http://purl.org/dc/terms/\" href=\"https://github.com/massimo-nocentini/competitive-programming/blob/master/tutorials/gotchas.ipynb\" rel=\"dct:source\">https://github.com/massimo-nocentini/competitive-programming/blob/master/tutorials/gotchas.ipynb</a>."
+    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png\" /></a><br />This work is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>."
    ]
   }
  ],
