--- a/tutorials/dynamic-programming.ipynb
+++ b/tutorials/dynamic-programming.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -252,6 +252,99 @@
    ],
    "source": [
     "is_not_monge(matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Algorithms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Longest increasing subsequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def argmax(iterable):\n",
+    "    return max(enumerate(iterable), key=operator.itemgetter(1), default=(None,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def lis(seq):\n",
+    "    L = []\n",
+    "    for i in range(len(seq)):\n",
+    "        L.append(max([L[j] + int(seq[j] < seq[i]) for j in range(i)], default=0))\n",
+    "    return L\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def lis(seq):\n",
+    "    L = []\n",
+    "    prev = []\n",
+    "    for i in range(len(seq)):\n",
+    "        j, maximum = argmax([1 + L[j] * int(seq[j] < seq[i]) for j in range(i)])\n",
+    "        L.append(maximum)\n",
+    "        prev.append(j)\n",
+    "    return L, prev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "seq = [5,2,8,6,3,6,9,7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 1, 2, 2, 2, 3, 4, 4], [None, 0, 0, 0, 1, 4, 5, 5])"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lis(seq)"
    ]
   },
   {
